# tenebrinet-v2

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  task_completion_summary.md  tenebrinet_live.cast  terminal-demo.cast
.github/workflows/: ci.yml
config/: honeypot.yml
docs/: GUIDE.md  ROADMAP.md
prompt/: codex-context.md
scripts/: clean_database.sh  convert_to_gif.sh  run_demo_session.sh  seed_database.py  simulate_traffic.py  train_model.py
tenebrinet/: __init__.py  cli.py
tenebrinet/api/: __init__.py  main.py  schemas.py
tenebrinet/api/routes/: __init__.py  attacks.py  health.py
tenebrinet/core/: __init__.py  config.py  database.py  logger.py  models.py
tenebrinet/dashboard/: index.html
tenebrinet/dashboard/static/css/: style.css
tenebrinet/dashboard/static/js/: app.js
tenebrinet/ml/: __init__.py  classifier.py  features.py  predictor.py
tenebrinet/services/: __init__.py  base.py
tenebrinet/services/ftp/: __init__.py  server.py
tenebrinet/services/http/: __init__.py  server.py
tenebrinet/services/ssh/: __init__.py  server.py
tenebrinet/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/api/: __init__.py  test_schemas.py
tests/unit/core/: __init__.py  test_models.py
tests/unit/ml/: __init__.py  test_classifier.py
tests/unit/services/: __init__.py  test_base.py  test_ftp_honeypot.py  test_http_honeypot.py  test_ssh_honeypot.py
